Tidy up references

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <meta name="generator" content="Eleventy">
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:creator" content="@lebreeze"/>
+  <meta property="og:url" content="https://www.leventali.com/"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Levent Ali, Group Engineering Manager at Intercom"/>
+  <meta property="og:description" content="{{ renderData.description or description or metadata.description }}"/>
+  <meta property="og:locale" content="en_GB"/>
+  <meta property="og:site_name" content="Levent Ali"/>
 
   <title>{{ renderData.title or title or metadata.title }}</title>
 
