Fix css font-sizes

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -38,7 +38,7 @@
 </head>
 
 <body class="font-sans" id="top" itemscope itemtype="http://schema.org/WebPage">
-  <div class="max-w-screen-md px-8 sm:px-6 md:px-4 lg:px-2 xl:px-0 mt-6 md:mt-16 mx-auto"><main>
+  <div class="max-w-screen-md px-8 sm:px-6 md:px-4 lg:px-2 xl:px-0 mt-6 md:mt-16 mx-auto">
     {{ content | safe }}
   </div>
 </body>
