--- a/src/about.njk
+++ b/src/about.njk
@@ -8,7 +8,7 @@ description: Levent Ali is an experienced leader with over a decade delivering i
 <p>Here's a random bit of context on where I've been and some highlights along the way.</p>
 {% for item in collections.milestone %}
   <div class="sm:text-lg flex flex-row">
-    <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-gray-900">{{ item.data.year }}</div>
+    <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-gray-900"><a href="{{ item.url }}">{{ item.data.year }}</a></div>
     <div class="text-left py-1 sm:py-2 pl-2 sm:pl-4 timeline-item">
       {{ item.templateContent | safe }}
     </div>
