--- a/src/about.njk
+++ b/src/about.njk
@@ -7,12 +7,16 @@ description: Levent Ali is an experienced leader with over a decade delivering i
 <h1>About me <a href="/">Levent Ali</a></h2>
 <p>Here's a random bit of context on where I've been and some highlights along the way.</p>
 {% for item in timeline %}
-  <div class="sm:text-lg flex flex-row">
-    <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-gray-900">{{ item.year }}</div>
-    <div class="text-left py-1 sm:py-2 pl-2 sm:pl-4">
-      {{ item.event }}
+  <article>
+    <div class="sm:text-lg flex flex-row">
+      <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-gray-900">
+        <time datetime="{{ item.year }}">{{ item.year }}</time>
+      </div>
+      <div class="text-left py-1 sm:py-2 pl-2 sm:pl-4">
+        {{ item.event }}
+      </div>
     </div>
-  </div>
+  </article>
 {% endfor %}
 
 <p class="pt-4"><a href="/">Go home</a></p>
