--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,7 @@ description: Levent Ali is an experienced leader with over a decade delivering i
 ---
 
 <h1>About me <a href="/">Levent Ali</a></h2>
-<p>Here's a random bit of context on where I've been and some highlights along the way.</p>
+<p>Here is some context on where I've been "unprofessionally" and some highlights along the way.</p>
 {% for item in timeline %}
   <article>
     <div class="sm:text-lg flex flex-row">
