--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="/styles/index.css">
 </head>
 
-<body class="font-sans" id="top" itemscope itemtype="http://schema.org/WebPage">
+<body class="font-sans text-black dark:text-white bg-white dark:bg-black" id="top" itemscope itemtype="http://schema.org/WebPage">
   <div class="max-w-screen-md px-8 sm:px-6 md:px-4 lg:px-2 xl:px-0 mt-6 md:mt-16 mx-auto">
     <main>
       {{ content | safe }}
