--- a/src/about.njk
+++ b/src/about.njk
@@ -9,7 +9,7 @@ description: Levent Ali is an experienced leader with over a decade delivering i
 {% for item in timeline %}
   <article>
     <div class="sm:text-lg flex flex-row">
-      <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-white">
+      <div class="font-bold text-right py-1 sm:py-2 pr-2 sm:pr-4 border-r-2 border-black dark:border-white">
         <time datetime="{{ item.year }}">{{ item.year }}</time>
       </div>
       <div class="text-left py-1 sm:py-2 pl-2 sm:pl-4">
