--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,9 +11,9 @@ h3 {
   }
 }
 a {
-  @apply text-pink-400 underline;
+  @apply text-pink-700 dark:text-pink-400 underline;
   &:hover {
-    @apply text-pink-600 underline;
+    @apply text-pink-500 dark:text-pink-600 underline;
   }
 }
 h1,
@@ -44,7 +44,7 @@ h2 {
 }
 
 body {
-  @apply mb-20 bg-black text-white;
+  @apply mb-20;
 }
 
 ul {
