--- a/src/music.njk
+++ b/src/music.njk
@@ -15,6 +15,6 @@ description: Levent Ali is an experienced leader with over a decade delivering i
   </article>
 {% endfor %}
 
-<p class="pt-4">⭐️ These albums are always on rotation.</p>
+<p>⭐️ These albums are always on rotation.</p>
 
-<p class="pt-4"><a href="/">Go home</a></p>
+<p><a href="/">Go home</a></p>
