--- a/src/music.njk
+++ b/src/music.njk
@@ -15,6 +15,6 @@ description: Levent Ali is an experienced leader with over a decade delivering i
   </article>
 {% endfor %}
 
-<p>⭐️ These are some of my all time favourites.</p>
+<p>⭐️ Denotes an all time favourite.</p>
 
 <p><a href="/">Go home</a></p>
