Add navigation plugin

--- a/src/about.njk
+++ b/src/about.njk
@@ -2,6 +2,9 @@
 layout: layouts/base.njk
 title: About me - Levent Ali
 description: Levent Ali is an experienced leader with over a decade delivering internet products and building cross-functional teams."
+eleventyNavigation:
+  key: About me
+  order: 2
 ---
 
 <h1>About me <a href="/">Levent Ali</a></h2>
@@ -18,5 +21,3 @@ description: Levent Ali is an experienced leader with over a decade delivering i
     </div>
   </article>
 {% endfor %}
-
-<p class="pt-4"><a href="/">Go home</a></p>
