--- a/src/music.njk
+++ b/src/music.njk
@@ -2,6 +2,9 @@
 layout: layouts/base.njk
 title: Music - Levent Ali
 description: Levent Ali is an experienced leader with over a decade delivering internet products and building cross-functional teams."
+eleventyNavigation:
+  key: What I'm listening to
+  order: 3
 ---
 
 <h1>Music <a href="/">Levent Ali</a></h2>
@@ -16,5 +19,3 @@ description: Levent Ali is an experienced leader with over a decade delivering i
 {% endfor %}
 
 <p>⭐️ Denotes an all time favourite.</p>
-
-<p><a href="/">Go home</a></p>
