--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -43,6 +43,12 @@
     <div class="max-w-screen-md px-8 sm:px-6 md:px-4 lg:px-2 xl:px-0 mt-6 md:mt-16 mx-auto">
       <main>
         {{ content | safe }}
+        <div class="navigation">
+          {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({
+            listClass: "list-none",
+            listItemClass: "inline"
+          }) | safe }}
+        </div>
       </main>
     </div>
   </body>
